'Spinner' and 'MatSnackBar' components were added to the app

--- a/src/app/dashboard/product-grid/product-grid.component.html
+++ b/src/app/dashboard/product-grid/product-grid.component.html
@@ -1,8 +1,22 @@
 <div id="products-grid">
-  <div class="row">
-    <div class="col-lg-4 col-md-4 col-sm-6"
-         *ngFor="let product of (products$ | async)">
+  <div class="row results"
+       infiniteScroll
+       [infiniteScrollDistance]="0"
+       [infiniteScrollThrottle]="500"
+       (scrolled)="onScroll()"
+       (scrolledUp)="onScroll()">
+    <div class="col-lg-4 col-md-4 col-sm-6 "
+         *ngFor="let product of currentList">
       <app-product-item [productData]="product"></app-product-item>
     </div>
   </div>
+  <div *ngIf="loadingProducts" style="width: 100%; display: flex; justify-content: center; padding-bottom: 15px">
+    <mat-progress-spinner
+      class="example-margin"
+      color="warn"
+      mode="indeterminate"
+      value="40">
+    </mat-progress-spinner>
+  </div>
 </div>
+
