--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,15 +2,14 @@
     width: 100%;
     height: 100%;
     position: relative;
-    overflow: auto;
+    //overflow: auto;
 
     .container-fluid {
         padding: 0;
         height: 100%;
-        overflow: auto;
+        //overflow: auto;
     }
 }
 
 
 
- 
