--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,6 @@ body {
         background-size: cover;
     }
   }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
