Some fixes were added to the 'Product Cart' component

--- a/src/app/dashboard/cart/cart.component.html
+++ b/src/app/dashboard/cart/cart.component.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="productTitle">
-        <h5> {{ product.product.productTitle }} </h5>
+        <h5> {{ product.product.productTitle }} X {{ product.product.productQuantity || ''}}</h5>
       </div>
 
       <!--Section-->
