Added some changes to the 'product-cart' component

--- a/src/app/dashboard/cart/cart.component.html
+++ b/src/app/dashboard/cart/cart.component.html
@@ -26,7 +26,7 @@
       -->
 
       <div class="productPrice">
-        <h5>{{ product.product.productPrice }} $</h5>
+        <h5>{{ product.product.productPrice * product.product.productQuantity}} $</h5>
       </div>
 
       <div class="deleteItem">
@@ -38,5 +38,6 @@
 
   <div id="controls" *ngIf="cart.length !== 0">
     <button class="btn btn-success" id="buyProducts">BUY</button>
+    <div id="totalPrice">{{ totalPrice }} $</div>
   </div>
 </div>
