--- a/src/app/dashboard/cart/cart.component.scss
+++ b/src/app/dashboard/cart/cart.component.scss
@@ -81,5 +81,18 @@
     line-height: 70px;
     position: relative;
     bottom: 0;
+
+    #totalPrice {
+      display: inline-block;
+      border: 1px solid rgb(104, 56, 236);
+      position: absolute;
+      right: 0;
+      width: 100px;
+      height: 100%;
+      background: rgb(104, 56, 236);
+      color: white;
+      text-align: center;
+
+    }
   }
 }
