--- a/src/app/dashboard/product-item/product-item.component.scss
+++ b/src/app/dashboard/product-item/product-item.component.scss
@@ -19,6 +19,11 @@
   width: 100%;
   height: 32vh;
   overflow: hidden;
+
+}
+
+.imgWrapper {
+  transition: all .5s;
 }
 
 .product > .productDescription {
@@ -40,6 +45,7 @@
   width: 100%;
   transition: opacity 2s ease-in 1s;
   opacity: 0;
+  transition: all .5s;
 }
 
 .product:hover .addToCartWrapper {
