Some fixes were added to the 'edit-profile' component

--- a/src/app/userprofile/edit-profile/edit-profile.component.html
+++ b/src/app/userprofile/edit-profile/edit-profile.component.html
@@ -1,7 +1,7 @@
 <div id="editModal">
   <div id="editModalHeader">
     <header>
-      <h4 id="editModalTitle">Product Cart</h4>
+      <h4 id="editModalTitle">Edit profile</h4>
       <button class="btn btn-danger" (click)="closeModal()">X</button>
     </header>
   </div>
